$Id: ChangeLog,v 1.442 2008/07/08 08:25:03 haraldkipp Exp $

2008-07-08  Harald Kipp  <harald.kipp@egnite.de>

	* arch/arm/dev/ostimer_at91.c, arch/arm/dev/ostimer_gba.c,
	arch/arm/dev/ostimer_lpc2xxx.c, arch/arm/dev/ostimer_s3c4510b.c,
	arch/avr/dev/ostimer.c, arch/unix/dev/ostimer.c, conf/os/os.nut,
	include/arch/timer.h, include/sys/timer.h, os/timer.c:
	Architecture specific implementations of NutDelay replaced by
	a more general one, which tries to automatically determine the
	required number of loops during NutTimerInit. Alternatively this 
	number is configurable. A new function NutMicroDelay has been added.


2008-07-07  Harald Kipp  <harald.kipp@egnite.de>

	* arch/arm/os/context.c, conf/os/os.nut, include/arch/arm/atom.h,
	os/thread.c: Three optional ways of handling critical sections are
	now available for ARM targets. For fastest interrupt response,
	critical section nesting should be disabled. This is the default
	and compatible with version 4.4. Alternatively the nesting level
	is trackes by either using the stack (fast, but may crash with
	some compilers and optimization settings) or by using a global
	variable (slow, but safe).

	* os/heap.c: Throws data abort exception on ARM. Function checkBeef()
	removed for 32 bit targets.


2008-07-01  Thiago A. Correa  <thiago.correa@gmail.com>

	* crt/malloc.c: Add realloc to override libc's realloc using 
	NutHeapRealloc.


2008-06-28  Harald Kipp  <harald.kipp@egnite.de>

	* os/heap.c: ImageCraft doesn't support inline. Replaced this keyword
	by macro INLINE.


2008-06-27  Harald Kipp  <harald.kipp@egnite.de>

	* crt/sbrk.c, conf/crt/crt.nut, conf/tools.nut, crt/putf.c:
	Added floating point support for stdio running on ARM. This
	is a dirty implementation and hadn't been tested very well.


2008-06-25  Matthias Ringwald <mringwal@inf.ethz.ch>
        * include/sys/heap.h, os/heap.c: Added NutHeapRealloc contributed
        by Moritz 'Monty' Struebe. 